[tool.poetry]
name = "fightingice-ai"
version = "0.1.0"
description = ""
authors = ["Robin Gieseke <robin.gieseke@me.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.9"
river = "^0.19.0"
numpy = "^1.26.1"
pandas = "^2.1.2"
scikit-learn = "^1.3.2"
pytest = "^7.4.3"
pyftg = {git = "https://github.com/TheDarkchip/pyftg.git"}
stable-baselines3 = "^2.1.0"
protobuf = "^4.25.0"
pillow = "9.5"
torch = {version = "^2.3.1+cu118", source = "pytorch-gpu"}
torchvision = {version = "^0.18.1+cu118", source = "pytorch-gpu"}
torchaudio = {version = "^2.3.1+cu118", source = "pytorch-gpu"}


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
